--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -1,9 +1,11 @@
-/* Error: Undefined variable.
+/* Error: Undefined mixin.
  *    ,
- * 19 |                         font-family: $tipografias-parrafos, sans-serif;
- *    |                                      ^^^^^^^^^^^^^^^^^^^^^
+ * 15 | /             @include mobile {
+ * 16 | |                     margin-top: 100px;
+ * 17 | |                     width: 100%;
+ * 18 | \                 }
  *    '
- *   scss\pages\login.scss 19:38  root stylesheet */
+ *   scss\pages\login.scss 15:13  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +15,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 19 \2502                          font-family: $tipografias-parrafos, sans-serif;\d\a    \2502                                       ^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   scss\\pages\\login.scss 19:38  root stylesheet";
+  content: "Error: Undefined mixin.\a    \2577 \a 15 \2502  \250c              @include mobile {\a 16 \2502  \2502                      margin-top: 100px;\a 17 \2502  \2502                      width: 100%;\a 18 \2502  \2514                  }\a    \2575 \a   scss\\pages\\login.scss 15:13  root stylesheet";
 }
