--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -41,6 +41,7 @@
                     }
             }
             .box{
+                padding: 10px;
                 h2 {
                         color: #ffffff;
                         margin-bottom: 25px;
