--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -6,14 +6,17 @@
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        min-height: calc(490vh - 180px);
+        min-height: calc(480vh - 180px);
+        @include tablet {
+                        min-height: calc(480vh - 220px);
+                }
         @include mobile{
                 background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0)), url(../img/responsive/tipodelaguitarra.jpg);
                 background-size: cover;
                 background-position: center center;
                 background-repeat: no-repeat;
                 padding-top: 100px;
-                min-height: calc(333vh - 220px);
+                min-height: calc(390vh - 180px);
         }
         .main-text {
                 width: 100%;
@@ -98,6 +101,9 @@
                                                 margin: 40px 130px;
                                                 color: rgb(255, 255, 255);
                                                 width: 350px;
+                                                @include tablet{
+                                                        margin: 0;
+                                                }
                                                 @include mobile{
                                                         margin-left: -10%;
                                                         width: 100%;
@@ -146,6 +152,9 @@
                 @include mobile{
                         display: none;
                 }
+                @include tablet{
+                        display: none;
+                }
         }
         .expansion-container1 {
                 margin-top: 40px;
@@ -153,8 +162,9 @@
                 width: 50%;
                 padding: 100px 20px 100px 100px;
                 @include tablet {
-                        display: none;
+                        width: 100%;
                 }
+                
                 @include mobile{
                         margin-top: 80px;
                         padding: 0;
@@ -174,6 +184,9 @@
                         width: 350px;
                         text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
                         font-family: $tipografias-titulos, sans-serif;
+                        @include tablet {
+                                        width: 600px;
+                                }
                         @include mobile{
                                 margin-left: 60px;
                         }
