--- a/scss/pages/noticias.scss
+++ b/scss/pages/noticias.scss
@@ -18,6 +18,13 @@
     padding: 20px;
     grid-gap: 90px;
     margin-bottom: 120px;
+    @include mobile{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    @include tablet{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
     .galeria-item{
         border: #101010 solid;
         position: relative;
@@ -25,6 +32,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: all 0.4s ease-in-out;
             &:hover {
                     opacity: 90%;
                     transition: .1s;
