--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header .nav {
   align-items: center;
   justify-content: space-around;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   header .nav {
     position: fixed;
     z-index: 1000;
@@ -37,37 +37,49 @@ header .nav {
 header .nav ul {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   header .nav ul {
+    width: 100%;
     display: flex;
   }
 }
 header .nav ul li {
-  margin: 20px;
   list-style-type: none;
+  margin: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   header .nav ul li {
-    width: 60px;
-    height: 10px;
+    width: 100%;
+    height: 100%;
+    margin: 8px;
   }
 }
 header .nav ul li a {
   color: aliceblue;
   text-transform: uppercase;
   text-decoration: none;
+  transition: all 0.5s ease-in-out;
+  font-size: 17px;
 }
 header .nav ul li a:hover {
   color: rgb(146, 146, 146);
   transition: 0.2s;
+}
+@media screen and (max-width: 431px) {
+  header .nav ul li a {
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+  }
 }
 header .nav-menu {
   position: fixed;
   width: 100%;
   height: 0vh;
   top: 100px;
-  background-color: rgba(0, 0, 0, 0.913);
+  background-color: rgba(228, 31, 31, 0.913);
   text-align: center;
 }
 header .nav-menu li {
@@ -109,7 +121,7 @@ header .logo {
     display: none;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   header .logo {
     display: none;
   }
@@ -129,7 +141,7 @@ header .redes {
     display: none;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   header .redes {
     display: none;
   }
@@ -148,7 +160,7 @@ header .redes img {
     display: block;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .pie-de-pagina {
     display: block;
   }
@@ -162,7 +174,7 @@ header .redes img {
   grid-gap: 50px;
   padding: 45px 0px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .pie-de-pagina .g1 {
     grid-template-columns: repeat(1, 1fr);
     text-align: center;
@@ -237,14 +249,14 @@ header .redes img {
     min-height: calc(480vh - 220px);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content {
     background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0)), url(../img/responsive/tipodelaguitarra.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     padding-top: 100px;
-    min-height: calc(390vh - 180px);
+    min-height: calc(322vh - 180px);
   }
 }
 .main-content .main-text {
@@ -257,7 +269,7 @@ header .redes img {
   justify-content: center;
   align-items: center;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .main-text {
     height: 800px;
   }
@@ -267,7 +279,7 @@ header .redes img {
   margin-bottom: 240px;
   width: 730px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .main-text .txt {
     margin-bottom: 0;
   }
@@ -314,7 +326,7 @@ header .redes img {
   background-color: rgb(0, 0, 0);
   padding: 100px 20px 100px 100px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .info .section-metallica .metallica-container1 {
     background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0)), url(../img/responsive/metallica.jpg);
     background-size: contain;
@@ -332,7 +344,7 @@ header .redes img {
   font-size: 60px;
   color: rgb(255, 255, 255);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .info .section-metallica .metallica-container1 h2 {
     margin-left: -23%;
   }
@@ -347,7 +359,7 @@ header .redes img {
     margin: 0;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .info .section-metallica .metallica-container1 p {
     margin-left: -10%;
     width: 100%;
@@ -356,7 +368,7 @@ header .redes img {
 .main-content .info .section-metallica .metallica-container1 p a {
   font-family: "Electrolize", sans-serif;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .info .section-metallica .metallica-container1 p a {
     margin-left: -30%;
   }
@@ -369,7 +381,7 @@ header .redes img {
   background-position: center;
   background-repeat: no-repeat;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .info .section-metallica .metallica-container2 {
     display: none;
   }
@@ -392,7 +404,7 @@ header .redes img {
   border-radius: 20px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .expansion-container2 {
     display: none;
   }
@@ -413,7 +425,7 @@ header .redes img {
     width: 100%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .expansion-container1 {
     margin-top: 80px;
     padding: 0;
@@ -437,12 +449,12 @@ header .redes img {
 }
 @media screen and (max-width: 987px) {
   .main-content .expansion-container1 p {
-    width: 600px;
+    width: 30px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .expansion-container1 p {
-    margin-left: 60px;
+    width: auto;
   }
 }
 .main-content .section-cartel {
@@ -453,7 +465,7 @@ header .redes img {
   width: 100%;
   padding: 355px 0px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .main-content .section-cartel {
     display: none;
   }
@@ -485,6 +497,7 @@ header .redes img {
   background-color: #000000;
   display: flex;
   justify-content: center;
+  min-height: calc(121vh - 180px);
 }
 .fondo-login .foto-login {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/calavera-guitarra.png);
@@ -495,7 +508,7 @@ header .redes img {
   justify-content: center;
   width: 50%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .fondo-login .foto-login {
     margin-top: 100px;
     width: 100%;
@@ -593,7 +606,7 @@ header .redes img {
   grid-gap: 90px;
   margin-bottom: 120px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .galeria-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -660,7 +673,7 @@ header .redes img {
     grid-template-columns: 2fr 1fr;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .fondo-shows .contenedor {
     margin-top: 20px;
     grid-template-columns: 2fr 1fr;
@@ -676,7 +689,7 @@ header .redes img {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .fondo-shows .contenedor .contenedor-conciertos {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -872,7 +885,7 @@ header .redes img {
 .fondo .container-sponsor .sponsor8 a img {
   height: 100px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .fondo .container-sponsor .sponsor8 .fila {
     width: 130px;
     height: 90px;
@@ -886,7 +899,7 @@ header .redes img {
 .fondo .container-sponsor .sponsor10 a img {
   height: 300px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 431px) {
   .fondo .container-sponsor .sponsor10 .c3 {
     width: 200px;
     height: 180px;
