--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -22,27 +22,37 @@ header{
                 z-index: 1000;
             }
             ul {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @include mobile{
+                    width: 100%;
                     display: flex;
-                    align-items: center;
-                    @include mobile{
-                        display: flex;
-                    }
-                    li {
-                            margin: 20px;
-                            list-style-type: none;
-                            @include mobile{
-                                width: 60px;
-                                height: 10px;
-                            }
-                            a {
-                                    color: aliceblue;
-                                    text-transform: uppercase;
-                                    text-decoration: none;
-                                    &:hover {
-                                            color: rgb(146, 146, 146);
+                }
+                li {
+                        list-style-type: none;
+                        margin: 20px;
+                        @include mobile{
+                            width: 100%;
+                            height: 100%;
+                            margin: 8px;
+                        }
+                        a {
+                                color: aliceblue;
+                                text-transform: uppercase;
+                                text-decoration: none;
+                                transition: all .5s ease-in-out;    
+                                font-size: 17px;
+                                &:hover {
+                                        color: rgb(146, 146, 146);
                                             transition: .2s;
-                                        }
                                 }
+                                @include mobile{
+                                    width: 100%;
+                                    height: 100%;
+                                    font-size: 15px;
+                                }
+                            }
                         }
                 }
         }
@@ -52,7 +62,7 @@ header{
         width: 100%;
         height: 0vh;
         top: 100px;
-        background-color: rgba(0, 0, 0, 0.913);
+        background-color: rgba(228, 31, 31, 0.913);
         text-align: center;
         li {
                 display: none;
