--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -16,7 +16,7 @@
                 background-position: center center;
                 background-repeat: no-repeat;
                 padding-top: 100px;
-                min-height: calc(390vh - 180px);
+                min-height: calc(322vh - 180px);
         }
         .main-text {
                 width: 100%;
@@ -185,10 +185,10 @@
                         text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
                         font-family: $tipografias-titulos, sans-serif;
                         @include tablet {
-                                        width: 600px;
+                                        width: 30px;
                                 }
                         @include mobile{
-                                margin-left: 60px;
+                                width: auto;
                         }
                 }
         }
