--- a/scss/pages/login.scss
+++ b/scss/pages/login.scss
@@ -4,6 +4,7 @@
     background-color: #000000;
     display: flex;
     justify-content: center;
+    min-height: calc(121vh - 180px);
     .foto-login {
             background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/calavera-guitarra.png);
             background-size: cover;
