--- a/scss/layout/main.scss
+++ b/scss/layout/main.scss
@@ -8,7 +8,7 @@
         background-attachment: fixed;
         min-height: calc(480vh - 180px);
         @include tablet {
-                        min-height: calc(480vh - 220px);
+                        min-height: calc(250vh - 220px);
                 }
         @include mobile{
                 background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0)), url(../img/responsive/tipodelaguitarra.jpg);
@@ -163,6 +163,8 @@
                 padding: 100px 20px 100px 100px;
                 @include tablet {
                         width: 100%;
+                        display: block;
+                        padding: 20px;
                 }
                 
                 @include mobile{
@@ -185,7 +187,7 @@
                         text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
                         font-family: $tipografias-titulos, sans-serif;
                         @include tablet {
-                                        width: 30px;
+                                        width: 300px;
                                 }
                         @include mobile{
                                 width: auto;
@@ -200,6 +202,9 @@
                 width: 100%;
                 padding: 355px 0px;
                 @include mobile{
+                        display: none;
+                }
+                @include tablet{
                         display: none;
                 }
         }
