--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ header .nav {
 }
 @media screen and (max-width: 431px) {
   header .nav {
+    width: 100%;
     position: fixed;
     z-index: 1000;
   }
@@ -256,7 +257,17 @@ header .redes img {
     background-position: center center;
     background-repeat: no-repeat;
     padding-top: 100px;
-    min-height: calc(322vh - 180px);
+    min-height: calc(317vh - 180px);
+  }
+}
+@media screen and (max-width: 360px) {
+  .main-content {
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(0, 0, 0)), url(../img/responsive/tipodelaguitarra.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding-top: 100px;
+    min-height: calc(400vh - 180px);
   }
 }
 .main-content .main-text {
@@ -282,6 +293,9 @@ header .redes img {
 @media screen and (max-width: 431px) {
   .main-content .main-text .txt {
     margin-bottom: 0;
+  }
+  .main-content .main-text .txt h1 {
+    font-size: 70px;
   }
 }
 .main-content .main-text .txt h1 {
@@ -836,6 +850,11 @@ header .redes img {
   background-color: #353535;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.756);
 }
+@media screen and (max-width: 431px) {
+  .fondo .container-sponsor {
+    width: 100%;
+  }
+}
 .fondo .container-sponsor .sponsor-titulo {
   margin: 90px;
   text-align: center;
@@ -885,6 +904,7 @@ header .redes img {
   }
 }
 .fondo .container-sponsor .sponsor8 {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
