--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -18,6 +18,7 @@ header{
             align-items: center;
             justify-content: space-around;
             @include mobile{
+                width: 100%;
                 position: fixed;
                 z-index: 1000;
             }
