--- a/scss/pages/sponsor.scss
+++ b/scss/pages/sponsor.scss
@@ -7,6 +7,9 @@
             height: 100%;
             background-color: #353535;
             box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.756);
+            @include mobile{
+                width: 100%;
+            }
             .sponsor-titulo {
                     margin: 90px;
                     text-align: center;
@@ -58,6 +61,7 @@
                 }
             }
             .sponsor8{
+                width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: space-around;
