--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -10,7 +10,7 @@
     }
     .g1 {
             width: 100%;
-            max-width: 1200px;
+            max-width: 1400px - 200px;
             margin: auto;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
