--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -12,7 +12,7 @@ header{
     .nav {
             font-family: $tipografias-titulos, sans-serif;
             width: 100%;
-            height: 100px;
+            height: 120px - 20px;
             background-color: black;
             display: flex;
             align-items: center;
