--- a/css/styles.css
+++ b/css/styles.css
@@ -294,9 +294,6 @@ header .redes img {
   .main-content .main-text .txt {
     margin-bottom: 0;
   }
-  .main-content .main-text .txt h1 {
-    font-size: 70px;
-  }
 }
 .main-content .main-text .txt h1 {
   font-size: 70px;
@@ -712,7 +709,7 @@ header .redes img {
 }
 @media screen and (max-width: 431px) {
   .fondo-shows .contenedor .contenedor-conciertos {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .fondo-shows .contenedor .contenedor-conciertos h3 {
@@ -779,6 +776,12 @@ header .redes img {
   font-family: "Anton", sans-serif;
   color: #000000;
 }
+@media screen and (max-width: 431px) {
+  .fondo-shows .contenedor .banner h3 {
+    font-size: 30px;
+    color: #ffffff;
+  }
+}
 .fondo-shows .contenedor .banner ul {
   display: grid;
   grid-template-rows: 1fr auto;
@@ -789,6 +792,12 @@ header .redes img {
   color: #ffffff;
   margin: 15px;
   font-weight: bold;
+}
+@media screen and (max-width: 431px) {
+  .fondo-shows .contenedor .banner ul li {
+    margin-top: 100px;
+    font-size: 20px;
+  }
 }
 .fondo-shows .contenedor .banner .boton {
   background: #FFD600;
