--- a/scss/pages/shows.scss
+++ b/scss/pages/shows.scss
@@ -31,7 +31,7 @@
                         grid-template-columns: repeat(2, 1fr);
                     }
                     @include mobile{
-                        grid-template-columns: repeat(2, 1fr);
+                        grid-template-columns: repeat(1, 1fr);
                     }
                     h3 {
                             font-family: $tipografias-parrafos, sans-serif;
@@ -100,7 +100,12 @@
                 h3 {
                         font-family: $tipografias-parrafos, sans-serif;
                         color: #000000;
+                        @include mobile {
+                                font-size: 30px;
+                                color: #ffffff;
+                            }
                     }
+
                 ul {
                         display: grid;
                         grid-template-rows: 1fr auto;
@@ -110,6 +115,10 @@
                                 color: #ffffff;
                                 margin: 15px;
                                 font-weight: bold;
+                                @include mobile{
+                                    margin-top: 100px;
+                                    font-size: 20px;
+                                }
                             }
                 }
                 .boton {
