--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -92,12 +92,18 @@ header{
     #check {
         display: none;
     }
-    #check:checked~.nav-menu {
-        height: 100vh;
+    #check:checked~{
+        .nav-menu {
+                height: 100vh;
+            }
     }
     
-    #check:checked~.nav-menu li {
-        display: block;
+    #check:checked~{
+        .nav-menu{
+            li {
+                    display: block;
+                }
+        }
     }
     .logo {
             height: 90px;
