--- a/scss/pages/shows.scss
+++ b/scss/pages/shows.scss
@@ -61,7 +61,7 @@
                         background-image: url('../img/grilla-concierto/entrerios.jpg');
                         
                     }
-                    .card1, .card2, .card3, .card4, .card5, .card6 {
+                    .card {
                         border-radius: 10px;
                         min-height: 200px;
                         font-weight: bold;
